--- a/Assessments/FARDEEN SHA (M1)/Assignment 1/fardeen.html
+++ b/Assessments/FARDEEN SHA (M1)/Assignment 1/fardeen.html
@@ -16,7 +16,7 @@
      <div class="resume_content">
        <div class="resume_item resume_info">
          <div class="title">
-           <p class="bold">B HARSHA VARDHAN</p>
+           <p class="bold">M FARDEEN SHA</p>
            <p class="regular">Computer Science Engineer</p>
          </div>
          <ul>
@@ -25,7 +25,7 @@
                <i class="fas fa-map-signs"></i>
              </div>
              <div class="data">
-               KURNOOL <br /> Andhra Pradesh
+               SIRUSERI <br /> CHENNAI
              </div>
            </li>
            <li>
@@ -33,7 +33,7 @@
                <i class="fas fa-mobile-alt"></i>
              </div>
              <div class="data">
-               +91 9293333083
+               +91 7845309964
              </div>
            </li>
            <li>
@@ -41,7 +41,7 @@
                <i class="fas fa-envelope"></i>
              </div>
              <div class="data">
-              vardhanbadriharsha@gmail.com
+             fsha822@gmail.com
              </div>
            </li>
          </ul>
@@ -103,7 +103,7 @@
              </div>
              <div class="data">
                <p class="semi-bold">Linkedin</p>
-               <p>Harsha26@linkedin</p>
+               <p>FARDEEN SHA@linkedin</p>
              </div>
            </li>
          </ul>
